--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<div id="mask">
+		<div class="dialog">
+			<h1> Game Over </h1>
+			<p id="final-score"> You scored some points </p>
+			<button onclick="resetGame()"> Play again </button>
+			<button onclick="quitGame()"> Quit </button>
+		</div>
+	</div>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
